<resources>
    <string name="app_name">NewsApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">l_machajdik@utb.cz</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="fragment_title_search">Search</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_title_home">Home</string>
    <string name="category_title_topHeadlines">Top Headlines</string>
    <string name="fragment_title_business">Business</string>
    <string name="fragment_title_entertainment">Entertainment</string>
    <string name="fragment_title_general">General</string>
    <string name="fragment_title_health">Health</string>
    <string name="fragment_title_mixed">Mixed</string>
    <string name="fragment_title_science">Science</string>
    <string name="fragment_title_sports">Sports</string>
    <string name="fragment_title_technology">Technology</string>
    <string name="home_text_quick_search">Quick search</string>
    <string name="home_text_jump_to">Jump to</string>
    <string name="search_text_sort_by">Sort by</string>
    <string name="search_relevancy">Relevancy</string>
    <string name="search_latest">Latest</string>
    <string name="search_popularity">Popularity</string>
    <string name="search_language">Language</string>
    <string name="search_date">Date</string>
    <string name="search_from">From</string>
    <string name="search_to">To</string>
    <string name="menu_select_country">Select Country</string>
    <string name="menu_search">Search</string>
    <string name="home_search_hint">Type something here..</string>
    <string name="search_hint_start_date">Start date</string>
    <string name="search_hint_end_date">End date</string>
    <string name="internet_connection_problem">There was a problem connecting to network</string>
</resources>